--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -65,4 +65,9 @@
     <string name="ask_user_interval_every_open">Every time app opens</string>
     <string name="ask_user_interval_every_12">Every 12 hours</string>
     <string name="ask_user_interval_every_24">Every 24 hours</string>
+    <string-array name="brapi_filter_type_entries">
+        <item>@string/brapi_filter_type_program</item>
+        <item>@string/brapi_filter_type_season</item>
+        <item>@string/brapi_filter_type_trial</item>
+    </string-array>
 </resources>
