--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -34,6 +34,9 @@
     <color name="main_color_seekbar_thumb">#90654321</color>
     <color name="light_gray">#E7E8E8</color>
     <color name="main_card_color_pressed">#9E9E9E</color>
+    <color name="main_chip_first_color">#47b65d</color>
+    <color name="main_chip_second_color">#00a771</color>
+    <color name="main_chip_third_color">#009683</color>
 
     <!-- blue theme colors -->
     <color name="blue_border">@color/BLACK</color>
@@ -64,6 +67,9 @@
     <color name="blue_button_color_pressed">#969696</color>
     <color name="blue_subheading_color">#595959</color>
     <color name="blue_color_text_secondary">#595959</color>
+    <color name="blue_chip_first_color">#2fd2b3</color>
+    <color name="blue_chip_second_color">#74e39b</color>
+    <color name="blue_chip_third_color">#b5f082</color>
 
     <!-- high contrast theme colors -->
     <color name="high_contrast_border">@color/BLACK</color>
@@ -94,6 +100,9 @@
     <color name="high_contrast_button_color_pressed">@color/WHITE</color>
     <color name="high_contrast_subheading_color">@color/BLACK</color>
     <color name="high_contrast_color_text_secondary">@color/BLACK</color>
+    <color name="high_contrast_chip_first_color">#c6c6c6</color>
+    <color name="high_contrast_chip_second_color">#919191</color>
+    <color name="high_contrast_chip_third_color">#5e5e5e</color>
 
     <color name="circleBackgroundMiddleColor">#80FEFEFE</color>
     <color name="circleBackgroundMiddleColorPressed">#20FEFEFE</color>
