--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -32,4 +32,7 @@
     <dimen name="fb_trait_fab_size">76dp</dimen>
     <dimen name="fb_trait_big_fab_size">176dp</dimen>
     <dimen name="fb_trait_fab_image_size">38dp</dimen>
+
+    <dimen name="brapi_filter_tv_padding">8dp</dimen>
+    <dimen name="brapi_filter_pb_size">200dp</dimen>
 </resources>
