--- a/app/src/main/res/xml/preferences_location.xml
+++ b/app/src/main/res/xml/preferences_location.xml
@@ -19,7 +19,7 @@
             android:title="@string/pref_general_location_collection_title"
             android:entries="@array/pref_general_location_acquisition_level_entries"
             android:entryValues="@array/pref_general_location_acquisition_level_values"
-            android:defaultValue="1"/>
+            android:defaultValue="0"/>
 
         <ListPreference
             android:icon="@drawable/ic_crosshairs_question"
@@ -54,6 +54,29 @@
             android:summary="@string/pref_geonav_search_method_summary"
             android:title="@string/pref_geonav_search_method_title"/>
 
+        <EditTextPreference
+            android:defaultValue="0.001"
+            android:icon="@drawable/ic_map_marker_distance"
+            android:key="com.fieldbook.tracker.geonav.parameters.trapezoid.D1"
+            android:summary="@string/pref_geonav_search_trapezoid_d1_summary"
+            android:title="@string/pref_geonav_search_trapezoid_d1_title" />
+
+        <EditTextPreference
+            android:defaultValue="0.01"
+            android:icon="@drawable/ic_map_marker_distance"
+            android:key="com.fieldbook.tracker.geonav.parameters.trapezoid.D2"
+            android:summary="@string/pref_geonav_search_trapezoid_d2_summary"
+            android:title="@string/pref_geonav_search_trapezoid_d2_title" />
+
+        <ListPreference
+            android:defaultValue="0"
+            android:entries="@array/pref_geonav_search_angles"
+            android:entryValues="@array/pref_geonav_search_angle_values"
+            android:icon="@drawable/ic_compass_calibration_black_24dp"
+            android:key="com.fieldbook.tracker.geonav.parameters.SEARCH_ANGLE"
+            android:summary="@string/pref_geonav_search_angle_summary"
+            android:title="@string/pref_geonav_search_angle_title" />
+
         <ListPreference
             android:defaultValue="0"
             android:entries="@array/pref_geonav_logging_modes"
@@ -69,36 +92,6 @@
             android:key="com.fieldbook.tracker.geonav.UPDATE_INTERVAL"
             android:summary="@string/pref_geonav_update_interval_summary"
             android:title="@string/pref_geonav_update_interval_title" />
-
-        <PreferenceCategory
-            android:key="com.fieldbook.tracker.geonav.parameters.CATEGORY_KEY"
-            android:title="@string/pref_behavior_geonav_parameters_category_title"
-            app:iconSpaceReserved="false"
-            app:isPreferenceVisible="false">
-
-            <EditTextPreference
-                android:defaultValue="0.001"
-                android:icon="@drawable/ic_map_marker_distance"
-                android:key="com.fieldbook.tracker.geonav.parameters.trapezoid.D1"
-                android:summary="@string/pref_geonav_search_trapezoid_d1_summary"
-                android:title="@string/pref_geonav_search_trapezoid_d1_title" />
-
-            <EditTextPreference
-                android:defaultValue="0.01"
-                android:icon="@drawable/ic_map_marker_distance"
-                android:key="com.fieldbook.tracker.geonav.parameters.trapezoid.D2"
-                android:summary="@string/pref_geonav_search_trapezoid_d2_summary"
-                android:title="@string/pref_geonav_search_trapezoid_d2_title" />
-
-            <ListPreference
-                android:defaultValue="0"
-                android:entries="@array/pref_geonav_search_angles"
-                android:entryValues="@array/pref_geonav_search_angle_values"
-                android:icon="@drawable/ic_compass_calibration_black_24dp"
-                android:key="com.fieldbook.tracker.geonav.SEARCH_ANGLE"
-                android:summary="@string/pref_geonav_search_angle_summary"
-                android:title="@string/pref_geonav_search_angle_title" />
-        </PreferenceCategory>
 
     </PreferenceCategory>
 
