replace require user with never option in verification interval

--- a/app/src/main/res/values/arrays.xml
+++ b/app/src/main/res/values/arrays.xml
@@ -52,14 +52,16 @@
         <item>2</item>
         <item>3</item>
     </string-array>
-    <string-array name="preferences_profile_ask_user_interval_entries">
-        <item>@string/ask_user_interval_every_open</item>
-        <item>@string/ask_user_interval_every_12</item>
-        <item>@string/ask_user_interval_every_24</item>
+    <string-array name="preferences_profile_verification_interval_entries">
+        <item>@string/verification_interval_every_open</item>
+        <item>@string/verification_interval_every_12</item>
+        <item>@string/verification_interval_every_24</item>
+        <item>@string/verification_interval_never</item>
     </string-array>
-    <string-array name="preferences_profile_ask_user_interval_values">
+    <string-array name="preferences_profile_verification_interval_values">
         <item>0</item>
         <item>1</item>
         <item>2</item>
+        <item>3</item>
     </string-array>
 </resources>
